Create endpoint to get random recipe, migrate to nextjs