@@ -1,8 +1,7 @@
 package com.amoeslund.whatshouldieat.controllers.modelassemblers;
 
 import com.amoeslund.whatshouldieat.controllers.RecipeController;
-import com.amoeslund.whatshouldieat.models.RecipeDto;
-import com.amoeslund.whatshouldieat.repositories.entities.Recipe;
+import com.amoeslund.whatshouldieat.models.Recipe;
 import org.springframework.hateoas.CollectionModel;
 import org.springframework.hateoas.EntityModel;
 import org.springframework.hateoas.server.RepresentationModelAssembler;
@@ -18,7 +17,7 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
 @Component
 
-public class RecipeModelAssembler implements RepresentationModelAssembler<Recipe, EntityModel<RecipeDto>> {
+public class RecipeModelAssembler implements RepresentationModelAssembler<com.amoeslund.whatshouldieat.repositories.entities.Recipe, EntityModel<Recipe>> {
 
     private final RecipeTagModelAssembler recipeTagModelAssembler;
 
@@ -27,18 +26,18 @@ public class RecipeModelAssembler implements RepresentationModelAssembler<Recipe
     }
 
     @Override
-    public EntityModel<RecipeDto> toModel(Recipe recipe) {
+    public EntityModel<Recipe> toModel(com.amoeslund.whatshouldieat.repositories.entities.Recipe recipe) {
 
-        List<EntityModel<RecipeDto.RecipeTagDto>> tagModels = recipe.getRecipeTags().stream().map(recipeTagModelAssembler::toModel).collect(Collectors.toList());
-        List<RecipeDto.RecipeStatDto> recipeStats = recipe.getRecipeStats().stream().map(recipeStat -> new RecipeDto.RecipeStatDto(recipeStat.getLabel(), recipeStat.getDescription())).toList();
-        RecipeDto recipeDto = new RecipeDto(recipe.getId(), recipe.getName(), recipeStats, recipe.getImage(), tagModels, recipe.getUrl());
+        List<EntityModel<Recipe.RecipeTag>> tagModels = recipe.getRecipeTags().stream().map(recipeTagModelAssembler::toModel).collect(Collectors.toList());
+        List<Recipe.RecipeStat> recipeStats = recipe.getRecipeStats().stream().map(recipeStat -> new Recipe.RecipeStat(recipeStat.getLabel(), recipeStat.getDescription())).toList();
+        Recipe recipeDto = new Recipe(recipe.getId(), recipe.getName(), recipeStats, recipe.getImage(), tagModels, recipe.getUrl());
         return EntityModel.of(recipeDto, linkTo(methodOn(RecipeController.class).one(recipeDto.id())).withSelfRel(), linkTo(methodOn(RecipeController.class).all()).withRel("recipes"));
     }
 
     @Override
-    public CollectionModel<EntityModel<RecipeDto>> toCollectionModel(Iterable<? extends Recipe> entities) {
-        List<EntityModel<RecipeDto>> recipes = new ArrayList<>();
-        for (Recipe entity : entities) {
+    public CollectionModel<EntityModel<Recipe>> toCollectionModel(Iterable<? extends com.amoeslund.whatshouldieat.repositories.entities.Recipe> entities) {
+        List<EntityModel<Recipe>> recipes = new ArrayList<>();
+        for (com.amoeslund.whatshouldieat.repositories.entities.Recipe entity : entities) {
             recipes.add(toModel(entity));
         }
         return CollectionModel.of(recipes, linkTo(methodOn(RecipeController.class).all()).withSelfRel());
